Fixed RSS feed link

--- a/partials/socialLinks.hbs
+++ b/partials/socialLinks.hbs
@@ -1,5 +1,5 @@
 <ul id="social-links">
 	<a href="#">Twitter</a>
 	<a href="#">Github</a>
-	<a href="{{@blog.url}}rss/">Subscribe</a>
+	<a href="{{@blog.url}}/rss">Subscribe</a>
 </ul>
