--- a/post.hbs
+++ b/post.hbs
@@ -1,7 +1,7 @@
 {{!< default}}
 
 <header id="post-header" {{#if @blog.cover}}style="background-image: url({{@blog.cover}})"{{/if}}  data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50" data-stellar-vertical-offset="50">
-	<a href="/" id="blog-title">Thomas.</a>
+	<a href="/" id="blog-title">{{@blog.title}}</a>
 	{{> links}}
 	
 	<div class="cf"></div>
